# FastAPI-with-UV-

./: .env  README.md  main.py  pyproject.toml  test.db
app/config/: database.py
app/controllers/: product_controller.py
app/models/: product_model.py  user_model.py
app/routes/: products_routes.py
app/schema/: product_schema.py
app/schemas/: product_schema.py  user_schema.py
